--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,9 @@
 - Draw in reverse order
 - longer pause, number hotkeys for pause duration, space hotkey for pause/unpause, arrow hotkeys for advancing
 
+- Windows Screensaver dialog Preview
+	- scaling (this might be useful whenever VisionBoard does not fit Window)
+
 BUG: Image.FromFile() locks file, therefore save fails on locked filenames
 
 - Captions
