--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,14 @@
 ﻿TODO
 ----
 
+BUG: Play not using modified Items' positions
+
+- Scaling code can be improved (for Windows Screensaver preview window & when VB doesn't fit Window)
+	- center offset is not right
+	- ideally Background bitmap lines up with Screensavr
+
 - Draw in reverse order
 - longer pause, number hotkeys for pause duration, space hotkey for pause/unpause, arrow hotkeys for advancing
-
-- Windows Screensaver dialog Preview
-	- scaling (this might be useful whenever VisionBoard does not fit Window)
 
 BUG: Image.FromFile() locks file, therefore save fails on locked filenames
 
