Screensaver pausing using SPACE

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,9 @@
 ﻿TODO
 ----
 
+Screensave Pausing: longer pause, number hotkeys for pause duration, arrow hotkeys for advancing
+
 - Draw in reverse order
-- longer pause, number hotkeys for pause duration, space hotkey for pause/unpause, arrow hotkeys for advancing
 
 BUG: Image.FromFile() locks file, therefore save fails on locked filenames
 
