GitHub Copilot suggestions

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,14 @@
 - longer pause, numbers
 
 BUG: Image.FromFile() locks file, therefore save fails on locked filenames
+	- replace with Image.FromStream
 
 - Captions
 	- add Captions
 	- rename files?
+
+GitHub Copilot suggestions
+- List<T> in VisionBoard.cs
+- Paint() is MainForm.cs & ScreensaverForm.cs recreate bitmaps, so cache these
+- lazy load images in vbdFile.Read()
+- Upgrade to .NET Core/5/6
